--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -885,7 +885,7 @@ p:last-child{
             <br><br><br>-->
           <br><br><br>
 
-          <img src="static/img/ai.gif" class="img-fluid animated" alt="" >
+          <img src="static/img/logo4.gif" style="width:650px;height:450px;" class="img-fluid animated" alt="" >
         </div>
       </div>
     </div>
