--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -882,10 +882,10 @@ p:last-child{
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <!--ICMISC-2023-Final_Logo-removebg-preview style="width:350px;height:350px;"
-            <br><br><br>-->
+            <br><br><br> style="width:650px;height: 450px;"-->
           <br><br><br>
 
-          <img src="static/img/logo4.gif" style="width:650px;height:450px;" class="img-fluid animated" alt="" >
+          <img src="static/img/ai.gif"  class="img-fluid animated" alt="" >
         </div>
       </div>
     </div>
