--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -934,8 +934,8 @@ p:last-child{
      <img src="static/img/uoj.jpg"
      style="width:210px;height:140px;">-->
 
-     <img src="static/img/springer.jpg" align="left"  >
-     <img src="static/img/klu.png" align="right" style="width:210px;height:110px;" >
+     <!--<img src="static/img/springer.jpg" align="left"  >-->
+     <img src="static/img/klu.png" align="center" style="width:210px;height:110px;" >
           </div>
 
           <!-- ======= FLIP TIMER PRAC ======= -->
@@ -944,7 +944,8 @@ p:last-child{
               <p>MARK YOUR CALENDARS</p>
             </div>-->
             <!--<p style="text-align: rigth;">MARK YOUR CALENDARS</p><br><br>-->
-            <br><br><br><br><br><br><br><p style="text-align: center;">MARK YOUR CALENDARS</p>
+            <!--<br><br><br><br><br><br><br>-->
+            <p style="text-align: center;">MARK YOUR CALENDARS</p>
             <div class="tick"
               data-did-init="handleTickInit">
               <div data-repeat="true"
@@ -1110,13 +1111,16 @@ p:last-child{
                 </p>-->
                 <ul>
                   <li><i class="ri-check-double-line"></i>
+                    It is planned to publish the proceedings with Springer in their Communications in Computer and Information Science series (final approval pending).</li>
+                  <!--
+                  <li><i class="ri-check-double-line"></i>
                     All accepted, registered and presented papers will be published in Conference Proceedings, Communications in Computer and Information Science, Springer Series,
 Abstracted and indexed in
 DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norwegian Register for Scientific Journals and Series, SCImago, SCOPUS, zbMATH
                 </li>
                 <a href="https://www.springer.com/series/7899" target="_blank" rel="noopener noreferrer">
                   www.springer.com/series/7899
-                </a>
+                </a>-->
                  <!-- <li><i class="ri-check-double-line"></i> Proposal submitted to springer</li>-->
                 </ul>
               </div>
@@ -2041,16 +2045,6 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Kingsley Ogudo,</b>
             <span>University of Johannesburg, South Africa.</span>
             <br><br>
-
-            <p>Key Committee Members:</p>
-            <br>
-            <b style="font-size:20px;">Madjid Tavana,</b>
-            <span>Distinguished Chair of Business Systems and Analytics, La Salle University, USA.</span>
-            <br>
-            <b style="font-size:20px;">Rajib Ghosh,</b>
-            <span>National Institute of Technology, Patna, Bihar, India.</span>
-            <br>
-        </div>
 
 <!-- OLD VERSION
       <div class="section-title" data-aos="zoom-out">
