--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -933,10 +933,12 @@ p:last-child{
 
      <img src="static/img/uoj.jpg"
      style="width:210px;height:140px;">-->
-
-     <!--<img src="static/img/springer.jpg" align="left"  >-->
-     <img src="static/img/klu.png" align="center" style="width:210px;height:110px;" >
-          </div>
+     <img src="static/img/CCIS.jpg" align="middle"  ><br>
+     <img src="static/img/springer.jpg"   align="left">
+     
+     <img src="static/img/klu.png" align="right" style="width:210px;height:110px;" >
+          
+    </div>
 
           <!-- ======= FLIP TIMER PRAC ======= -->
            <!-- <div class="example">
@@ -944,8 +946,9 @@ p:last-child{
               <p>MARK YOUR CALENDARS</p>
             </div>-->
             <!--<p style="text-align: rigth;">MARK YOUR CALENDARS</p><br><br>-->
-            <!--<br><br><br><br><br><br><br>-->
-            <p style="text-align: center;">MARK YOUR CALENDARS</p>
+            <!--<br><br><br><br><br><br><br>--><br><br><br><br>
+            <br><br><br><br><br>
+            <p style= "white-space: pre-line;" align="middle">MARK YOUR CALENDARS</p></div>
             <div class="tick"
               data-did-init="handleTickInit">
               <div data-repeat="true"
@@ -1930,7 +1933,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
                 <span>University of Perugia, Italy</span>
         </div>
 
-
+<!--
         <div class="section-title" data-aos="zoom-out">
             <p>Technical Program Committee Chairs:</p>
             <br>
@@ -1949,8 +1952,9 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Arindam Biswas,</b>
             <span>Kazi Nazrul University, Asansol, WB, India.</span>
             <br><br>
-
-            <p>Publications Chairs:</p>
+-->
+<div class="section-title" data-aos="zoom-out">
+            <p>Technical Program Committee:</p>
             <br>
             <b style="font-size:20px;">Yu-Chen Hu,</b>
             <span>Tunghai University, Taichung City, Taiwan.</span>
@@ -1965,7 +1969,84 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <span>National Institute of Technology, Patna, India.</span>
             <br><br>
 
-            <p>Advisory Chairs:</p>
+            <p>International Program Committee:</p>
+<br>
+<b style="font-size:20px;">Debapriya Hazra,</b>
+<span>McGowan Institute for Regenerative Medicine, University of Pittsburgh, USA.</span>
+<br>
+<b style="font-size:20px;">Pelin ANGIN,</b>
+<span>Middle East Technical University, Ankara, Turkey.</span>
+<br>
+<b style="font-size:20px;">Nilgun Sengoz,</b>
+<span>Burdur Mehmet Akif Ersoy University, Burdur, Turkey.</span>
+<br>
+<b style="font-size:20px;">Joydeep Chandra,</b>
+<span>IIT, Patna, Bihar, India.</span>
+<br>
+<b style="font-size:20px;">Paul Kwan,</b>
+<span>Central Queensland University, Brisbane, Queensland, Australia.</span>
+<br>
+<b style="font-size:20px;">Arindam Biswas,</b>
+<span>Kazi Nazrul University, Asansol, WB, India.</span>
+<br>
+<b style="font-size:20px;">Sanjoy Kumar Saha,</b>
+<span>Jadavpur University, Kolkata, India.</span>
+<br>
+<b style="font-size:20px;">Tom Yeh,</b>
+<span>University of Colorado Boulder, USA.</span>
+<br>
+<b style="font-size:20px;">Philippe Fournier-Viger,</b>
+<span>Shenzhen University, Shenzhen, Guangdong, China.</span>
+<br>
+<b style="font-size:20px;">Susmit Shannigrahi,</b>
+<span>Tennessee Tech University, USA.</span>
+<br>
+<b style="font-size:20px;">Snehanshu Pal,</b>
+<span>NIT, Rourkela, India.</span>
+<br>
+<b style="font-size:20px;">Zhihan Lv,</b>
+<span>Uppsala University, Sweden.</span>
+<br>
+<b style="font-size:20px;">Paul S. Pang,</b>
+<span>Federation University, Australia.</span>
+<br>
+<b style="font-size:20px;">Sabah Mohammed,</b>
+<span>Lakehead University, Ontario, Canada.</span>
+<br>
+<b style="font-size:20px;">Sekhar Verma,</b>
+<span>IIIT Allahabad, India.</span>
+<br>
+<b style="font-size:20px;">Tseren-Onolt Ishdorj,</b>
+<span>Mongolian University of Science and Technology, Mongolia.</span>
+<br>
+<b style="font-size:20px;">Sourav Sen Gupta,</b>
+<span>IMEC, Leuven, Belgium.</span>
+<br>
+<b style="font-size:20px;">N. Venkatram,</b>
+<span>K L University, Guntur, India.</span>
+<br>
+<b style="font-size:20px;">Tai-hoon Kim,</b>
+<span>Chonnam National University, South Korea.</span>
+<br>
+<b style="font-size:20px;">Jinan Fiaidhi,</b>
+<span>Lakehead University, Ontario, Canada.</span>
+<br>
+<b style="font-size:20px;">Y. Byun,</b>
+<span>Jeju National University, South Korea.</span>
+<br>
+<b style="font-size:20px;">Khuder Altangeral,</b>
+<span>Mongolian Institute of Science and Technology, Mongolia.</span>
+<br>
+<b style="font-size:20px;">Rosslin Robles,</b>
+<span>University of San Agustin, Philippines.</span>
+<br>
+<b style="font-size:20px;">Alexey Setekein,</b>
+<span>Immanuel Kant Baltic Federal University, Russia.</span>
+<br>
+<b style="font-size:20px;">Sayan K. Ray,</b>
+<span>Manukau Institute of Technology, Manukau, New Zealand.</span>
+
+            <!--<p>Advisory Chairs:</p>
             <br>
             <b style="font-size:20px;">Sanjoy Kumar Saha,</b>
             <span>Jadavpur University, Kolkata, India.</span>
@@ -2023,7 +2104,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <br>
             <b style="font-size:20px;">Sayan K. Ray,</b>
             <span>Manukau Institute of Technology, Manukau, New Zealand.</span>
-            <br><br>
+            <br><br>-->
 
             <p>Local Arrangement Committee:</p>
             <br>
