--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -885,7 +885,7 @@ p:last-child{
             <br><br><br> style="width:650px;height: 450px;"-->
           <br><br><br>
 
-          <img src="static/img/ai.gif"  class="img-fluid animated" alt="" >
+          <img src="static/img/vij.jpg"  class="img-fluid animated" alt="" >
         </div>
       </div>
     </div>
@@ -947,7 +947,7 @@ p:last-child{
             </div>-->
             <!--<p style="text-align: rigth;">MARK YOUR CALENDARS</p><br><br>-->
             <!--<br><br><br><br><br><br><br>--><br><br><br><br>
-            <br><br><br><br><br>
+            <br><br><br>
             <p style= "white-space: pre-line;" align="middle">MARK YOUR CALENDARS</p></div>
             <div class="tick"
               data-did-init="handleTickInit">
