--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1931,6 +1931,8 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
           <br>
           <b style="font-size:20px;">Osvaldo Gervasi,</b>
                 <span>University of Perugia, Italy</span>
+          <b style="font-size:20px;">Rama Krishna Akella,</b>
+                      <span>KL University, Hyderabad, India</span>
         </div>
 
 <!--
@@ -2106,6 +2108,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <span>Manukau Institute of Technology, Manukau, New Zealand.</span>
             <br><br>-->
 
+            <!--
             <p>Local Arrangement Committee:</p>
             <br>
             <b style="font-size:20px;">Thirupathi Rao Nakka,</b>
@@ -2122,7 +2125,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <br>
             <b style="font-size:20px;">Megha Bhushan,</b>
             <span>DIT University, Dehradun, India.</span>
-            <br><br>
+            <br><br>-->
             <p>Finance Chairs:</p>
             <b style="font-size:20px;">Kingsley Ogudo,</b>
             <span>University of Johannesburg, South Africa.</span>
