--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -2141,6 +2141,15 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Chanda Rajkumar,</b>
             <span>KL University, Hyderabad, India.</span>
             <br><br>
+
+            <p>Local Arrangement Committee Members:</p>
+            <b style="font-size:20px;">Trinath Basu,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br>
+            <b style="font-size:20px;">P. Sreelakshmi,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br>
+
             <p>Convener:</p>
             <b style="font-size:20px;">Arpita Gupta,</b>
             <span>KL University, Hyderabad, India.</span>
