--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1237,7 +1237,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <div class="icon-box" data-aos="zoom-in-left">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
              <!-- <h4 class="title"><a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">Download Springer Format from Springer site:</a></h4> -->
-             <h4 class="title"><a href="">Download Format</a></h4>
+             <h4 class="title"><a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Download Format</a></h4>
               <p class="description">Information for Authors of Springer Proceedings lies in this site.</p>
             </div>
           </div>
@@ -1247,7 +1247,11 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <!--<h4 class="title"><a href="https://ocs.springer.com/misc/home/ICMISC2021">To upload formatted Paper through OCS with your registered login</a></h4>-->
               <h4 class="title"><a href="">Click here to upload formatted Paper with your registered login.</a></h4>
               <p class="description">OR</p>
-              <p class="description">Please submit/send your papers electronically to : icamcigm@gmail.com</p>
+              <p class="description">Please submit/send your papers electronically to : </p>
+              <p class="description">maths-cigai-2025@klh.edu.in</p>
+              <p class="description">AND</p>
+              <p class="description">Paper will be considered for reviews if the length of the paper minimum 12 pages.</p>
+            
             </div>
           </div>
 
