--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -877,6 +877,7 @@ p:last-child{
         </h1>
           <div>
             <h2>January 24-25, 2025</h2>
+            <h1 style="color:rgba(222,196,99,255);font-size:21px;">at KL University, Aziz Nagar, Hyderabad</h1>
           </div>
 
         </div>
@@ -1251,7 +1252,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <p class="description">maths-cigai-2025@klh.edu.in</p>
               <p class="description">AND</p>
               <p class="description">Paper will be considered for reviews if the length of the paper minimum 12 pages.</p>
-            
+
             </div>
           </div>
 
@@ -1509,9 +1510,9 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             </time>
             <h3 class="card__title r-title">Conference Dates</h3>
           </header>
-          <!--<div class="card__content">
-            <p>Travels to France, Italy, Spain, and Peru. After completing fashion editorial in Lima, prolongs stay to make portraits of local people in a daylight studio</p>
-          </div>-->
+          <div class="card__content">
+            <p>Venue: KL University, Aziz Nagar, Hyderabad</p>
+          </div>
         </div>
       </div>
     </div>
@@ -2052,6 +2053,9 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
 <br>
 <b style="font-size:20px;">Sayan K. Ray,</b>
 <span>Manukau Institute of Technology, Manukau, New Zealand.</span>
+<br>
+<b style="font-size:20px;">JIN Xue-bo,</b>
+<span>Beijing Technology and Business University, Beijing, China.</span>
 
             <!--<p>Advisory Chairs:</p>
             <br>
