--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -2136,22 +2136,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Megha Bhushan,</b>
             <span>DIT University, Dehradun, India.</span>
             <br><br>-->
-            <p>Finance Chairs:</p>
-            <b style="font-size:20px;">Kingsley Ogudo,</b>
-            <span>University of Johannesburg, South Africa.</span>
-            <br>
-            <b style="font-size:20px;">Pavan Kumar,</b>
-            <span>KL University, Hyderabad, India.</span>
-            <br>
-            <p>Publicity Committee Chairs:</p>
-            <b style="font-size:20px;">Megha Bhushan,</b>
-            <span>University of Seville, Spain.</span>
-            <br>
-            <b style="font-size:20px;">Chanda Rajkumar,</b>
-            <span>KL University, Hyderabad, India.</span>
-            <br><br>
-
-            <p>Local Arrangement Committee Members:</p>
+            <p>Local Conference Committee:</p>
             <b style="font-size:20px;">Trinath Basu,</b>
             <span>KL University, Hyderabad, India.</span>
             <br>
@@ -2166,6 +2151,30 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Sumalakshmi CH,</b>
             <span>KL University, Hyderabad, India.</span>
             <br><br>
+
+            <p>CO-CONVENER:</p>
+            <b style="font-size:20px;">Shadab Siddiqui,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br>
+            <b style="font-size:20px;">Sumit Hazra,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br><br>
+
+            <p>ORGANIZING SECRETARY</p>
+            <b style="font-size:20px;">Kingsley Ogudo,</b>
+            <span>University of Johannesburg, South Africa.</span>
+            <br>
+            <b style="font-size:20px;">Pavan Kumar,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br>
+            <b style="font-size:20px;">Chanda Rajkumar,</b>
+            <span>KL University, Hyderabad, India.</span>
+            <br>
+            <b style="font-size:20px;">Megha Bhushan,</b>
+            <span>University of Seville, Spain.</span>
+            <br><br>
+
+
 
 
 <!-- OLD VERSION
@@ -2282,7 +2291,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
     </div>-->
 
         <div class="section-title" data-aos="zoom-out">
-          <p>Conference Secretary:</p>
+          <p>PUBLICITY COMMITTEE:</p>
           <br>
           <b style="font-size:20px;">Dhiren Dommeti,</b><!--www.dhiren.engineer-->
                 <br>
