--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1240,7 +1240,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
              <!-- <h4 class="title"><a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">Download Springer Format from Springer site:</a></h4> -->
              <h4 class="title"><a <!--href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"-->>Download Format</a></h4>
-              <p class="description">Information for Authors of Springer Proceedings lies in this site.</p>
+              <p class="description">Information for submission will be activated soon.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
