--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -921,9 +921,12 @@ p:last-child{
 
   <main id="main">
     <!-- ======= About Section ======= -->
+
     <section id="about" class="about">
       <div class="container">
         <div class="section-title" data-aos="zoom-out">
+
+          <!--LOGO GOES HERE-->
           <div align="middle">
     <!--<img src="static/img/klu.png"
      style="width:210px;height:110px;">
@@ -939,7 +942,7 @@ p:last-child{
 
      <img src="static/img/klu.png" align="right" style="width:210px;height:110px;" >
 -->
-<img src="static/img/klu.png" align="middle" style="width:210px;height:110px;" >
+<!--<img src="static/img/klu.png" align="middle" style="width:210px;height:110px;" >-->
     </div>
 
           <!-- ======= FLIP TIMER PRAC ======= -->
@@ -948,8 +951,10 @@ p:last-child{
               <p>MARK YOUR CALENDARS</p>
             </div>-->
             <!--<p style="text-align: rigth;">MARK YOUR CALENDARS</p><br><br>-->
-            <!--<br><br><br><br><br><br><br>--><br><br><br><br>
-            <br><br><br>
+            <!--<br><br><br><br><br><br><br>-->
+
+            <!--<br><br><br><br>
+            <br><br><br>-->
             <p style= "white-space: pre-line;" align="middle">MARK YOUR CALENDARS</p></div>
             <div class="tick"
               data-did-init="handleTickInit">
