--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -4,7 +4,7 @@ ____   ____ ___  ____  ____ ___ ___  _   _
 \___ \| |  | | | | |_) | |_) | | | | |  \| |
 ___) | |__| |_| |  _ <|  __/| | |_| | |\  |
 |____/ \____\___/|_| \_\_|  |___\___/|_| \_|
-www.dhiren.engineer
+www.dhiren.pro
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -877,7 +877,7 @@ p:last-child{
         </h1>
           <div>
             <h2>April 24 - 25, 2025</h2>
-            <h1 style="color:rgba(222,196,99,255);font-size:21px;">at KL University, Aziz Nagar, Hyderabad</h1>
+            <h1 style="color:rgba(222,196,99,255);font-size:21px;">at Hyderabad</h1>
           </div>
 
         </div>
@@ -1255,7 +1255,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <h4 class="title"><a href="">Click here to upload formatted Paper with your registered login.</a></h4>
               <p class="description">OR</p>
               <p class="description">Please submit/send your papers electronically to : </p>
-              <p class="description">maths-cigai-2025@klh.edu.in</p>
+              <p class="description">EMAIL TBD</p>
               <p class="description">AND</p>
               <p class="description">Paper will be considered for reviews if the length of the paper minimum 12 pages.</p>
 
@@ -1517,7 +1517,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <h3 class="card__title r-title">Conference Dates</h3>
           </header>
           <div class="card__content">
-            <p>Venue: KL University, Aziz Nagar, Hyderabad</p>
+            <p>Venue: Hyderabad</p>
           </div>
         </div>
       </div>
