--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1943,8 +1943,8 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
           <b style="font-size:20px;">Osvaldo Gervasi,</b>
                 <span>University of Perugia, Italy</span>
                 <br>
-          <b style="font-size:20px;">Rama Krishna Akella,</b>
-                      <span>KL University, Hyderabad, India</span>
+         <!-- <b style="font-size:20px;">Rama Krishna Akella,</b>
+                      <span>KL University, Hyderabad, India</span>-->
         </div>
 
 <!--
@@ -1973,9 +1973,9 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Yu-Chen Hu,</b>
             <span>Tunghai University, Taichung City, Taiwan.</span>
             <br>
-            <b style="font-size:20px;">Debnath Bhattacharyya,</b>
+            <!--<b style="font-size:20px;">Debnath Bhattacharyya,</b>
             <span>KL University, Guntur, India.</span>
-            <br>
+            <br>-->
             <b style="font-size:20px;">Jaroslav Frnda,</b>
             <span>University of Zilina, Zilina, Slovak Republic.</span>
             <br>
@@ -2141,7 +2141,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <b style="font-size:20px;">Megha Bhushan,</b>
             <span>DIT University, Dehradun, India.</span>
             <br><br>-->
-            <p>Local Conference Committee:</p>
+            <!--<p>Local Conference Committee:</p>
             <b style="font-size:20px;">Trinath Basu,</b>
             <span>KL University, Hyderabad, India.</span>
             <br>
@@ -2163,18 +2163,19 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <br>
             <b style="font-size:20px;">Sumit Hazra,</b>
             <span>KL University, Hyderabad, India.</span>
-            <br><br>
+            <br><br>-->
 
             <p>ORGANIZING SECRETARY</p>
             <b style="font-size:20px;">Kingsley Ogudo,</b>
             <span>University of Johannesburg, South Africa.</span>
             <br>
+            <!--
             <b style="font-size:20px;">Pavan Kumar,</b>
             <span>KL University, Hyderabad, India.</span>
             <br>
             <b style="font-size:20px;">Chanda Rajkumar,</b>
             <span>KL University, Hyderabad, India.</span>
-            <br>
+            <br>-->
             <b style="font-size:20px;">Megha Bhushan,</b>
             <span>University of Seville, Spain.</span>
             <br><br>
@@ -2781,7 +2782,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>KL University, Aziznagar Campus, Hyderabad</p>
+                <p>Hyderabad</p>
               </div>
 
               <div class="email">
