--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -2298,7 +2298,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
     </div>-->
 
         <div class="section-title" data-aos="zoom-out">
-          <p>PUBLICITY COMMITTEE</p>
+          <p>TECHNICAL OPERATIONS TEAM</p>
           <br>
           <b style="font-size:20px;">Dhiren Dommeti,</b><!--www.dhiren.engineer-->
                 <br>
