updated formates and images

--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -928,7 +928,14 @@ Hyderabad, India</h1>
         <div class="section-title" data-aos="zoom-out">
 
           <!--LOGO GOES HERE-->
+
           <div align="middle">
+            <img src="static/img/springer.png" style="width:220px;height:130px;">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <img src="static/img/kprit.jpg">
+
+
     <!--<img src="static/img/klu.png"
      style="width:210px;height:110px;">
      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -1122,7 +1129,14 @@ Hyderabad, India</h1>
                 </p>-->
                 <ul>
                   <li><i class="ri-check-double-line"></i>
-                    All accepted papers will be published in Conference Proceedings.</li>
+                    All accepted papers will be published in Conference Proceedings, Scopus Indexed.</li>
+                    <li><i class="ri-check-double-line"></i>
+                      Proposal is submitted to "Springer Proceedings in Mathematics & Statistics" (https://www.springer.com/series/10533), a Scopus-indexed book series for possible publication after the evaluation and screening of all submissions.
+                    </li>
+                    <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank" rel="noopener noreferrer">
+                      Paper Format
+                    </a>
+
                   <!--
                   <li><i class="ri-check-double-line"></i>
                     All accepted, registered and presented papers will be published in Conference Proceedings, Communications in Computer and Information Science, Springer Series,
@@ -1245,8 +1259,8 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <div class="icon-box" data-aos="zoom-in-left">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
              <!-- <h4 class="title"><a href="https://www.springer.com/gp/authors-editors/conference-proceedings/conference-proceedings-guidelines">Download Springer Format from Springer site:</a></h4> -->
-             <h4 class="title"><a <!--href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"-->>Download Format</a></h4>
-              <p class="description">Information for submission will be activated soon.</p>
+             <h4 class="title"><a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"Download Format</a></h4>
+              <p class="description">Click to Download the Format</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
