--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -933,7 +933,7 @@ Hyderabad, India</h1>
             <img src="static/img/springer.png" style="width:220px;height:130px;">
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <img src="static/img/kprit.jpg">
+            <img src="static/img/klu.png" style="width:220px;height:130px;">
 
 
     <!--<img src="static/img/klu.png"
