--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -877,7 +877,7 @@ p:last-child{
         </h1>
           <div>
             <h2>June 19 - 20, 2025</h2>
-            <h1 style="color:rgba(222,196,99,255);font-size:21px;">Kommuri Pratap Reddy Institute of Technology (Autonomous),
+            <h1 style="color:rgba(222,196,99,255);font-size:21px;">Koneru Lakshmaiah Education Foundation,
 Hyderabad, India</h1>
           </div>
 
