--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1989,7 +1989,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <span>Tunghai University, Taichung City, Taiwan.</span>
             <br>
             <b style="font-size:20px;">Debnath Bhattacharyya,</b>
-            <span>KPRIT, Hyderabad, India.</span>
+            <span>KL University, Hyderabad, India.</span>
             <br>
             <b style="font-size:20px;">Jaroslav Frnda,</b>
             <span>University of Zilina, Zilina, Slovak Republic.</span>
