--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -543,7 +543,7 @@ Hyderabad, India</h1>
             <img src="static/img/springer.png" style="width:220px;height:130px;">
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <img src="static/img/klhb.jpg" style="width:220px;height:130px;">
+            <img src="static/img/KLHB.jpg" style="width:220px;height:130px;">
 
     </div>
 
