--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -440,7 +440,7 @@ p:last-child{
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <!--<li><a class="nav-link scrollto" href="#services">Services</a></li>-->
+          <li><a class="nav-link scrollto" href="#services">Submission</a></li>
           <li><a class="nav-link scrollto" href="#keyd">Key Dates</a></li>
           <li><a class="nav-link scrollto " href="#speakers">Keynote Speakers</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Register</a></li>
@@ -837,12 +837,8 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
               <!--<h4 class="title"><a href="https://ocs.springer.com/misc/home/ICMISC2021">To upload formatted Paper through OCS with your registered login</a></h4>-->
-              <h4 class="title"><a href="">Click here to upload formatted Paper with your registered login.</a></h4>
-              <p class="description">OR</p>
-              <p class="description">Please submit/send your papers electronically to : </p>
-              <p class="description">EMAIL TBD</p>
-              <p class="description">AND</p>
-              <p class="description">Paper will be considered for reviews if the length of the paper minimum 12 pages.</p>
+              <h4 class="title"><a href="https://equinocs.springernature.com/service/cigai-2025">Submitters/Authors are requested to Register yourself and then upload your papers by using your login.</a></h4>
+              <p class="description">Submitted paper length should be 8 and 10 pages.</p>
 
             </div>
           </div>
@@ -1172,10 +1168,51 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
           "TO BE UPDATED"</li>
                 </ul>
               </h3>-->
-          <p>Registration Fee: TBD</p>
+          <p>Registration Fee:</p>
         </div>
-        <!--
+        <div class="container mt-4">
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Category</th>
+        <th>Indian (INR)</th>
+        <th>Foreign (USD)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Academician</td>
+        <td>₹8000</td>
+        <td>$250</td>
+      </tr>
+      <tr>
+        <td>Students</td>
+        <td>₹4000</td>
+        <td>$150</td>
+      </tr>
+      <tr>
+        <td colspan="3" class="text-center">(UG, PG, Ph.D. Research Scholars)</td>
+      </tr>
+      <tr>
+        <td>Industry Participants</td>
+        <td>₹10000</td>
+        <td>$200</td>
+      </tr>
+      <tr>
+        <td>Only Participation</td>
+        <td>₹3000</td>
+        <td>$100</td>
+      </tr>
+    </tbody>
+  </table>
+  <!--<div class="text-center">
+    <a href="#" class="btn btn-primary">Register</a>
+  </div>-->
+</div>
+<!--
         <div class="row">
+
+
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="zoom-in">
@@ -1193,11 +1230,11 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
                 <li class="na">Article</li>
                 <li class="na">Logo</li>
               </ul>-->
-              <!--
+<!--
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Register</a>
-              </div>-->
-          <!--
+              </div>
+
           </div>
           </div>
 
@@ -1234,8 +1271,8 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
                 <a href="#" class="btn-buy">Register</a>
               </div>
             </div>
-          </div>
-        -->
+          </div>-->
+
 
           <!--<div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
@@ -1268,11 +1305,11 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               </div>
             </div>
           </div>-->
-
+<!--
         </div>
 
       </div>
-    </section>
+    </section>-->
     <!-- End Pricing Section -->
 
     <!-- ======= F.A.Q Section ======= -->
@@ -1393,7 +1430,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
             <span>National Institute of Technology, Patna, India.</span>
 
 
-            <p>International Program Committee:</p>
+            <p>International Advisory Committee:</p>
                 <b style="font-size:20px;">Debapriya Hazra,</b>
                 <span>McGowan Institute for Regenerative Medicine, University of Pittsburgh, USA.</span>
                 <br>
