--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -1653,7 +1653,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>icamcigm@gmail.com</p>
+                <p>math-cigai2025@klh.edu.in</p>
               </div>
               <!--
               <div class="phone">
