--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -58,6 +58,19 @@ www.dhiren.pro
   <!--FLIP TIMER-->
   <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">-->
+<!--PUBLICATION EXTENDED PAGE-->
+<style>
+  .publications img {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .publications img:hover {
+    transform: scale(1.1); /* Slightly enlarge the image */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow */
+  }
+</style>
+
+
 <!-- Slider-->
 <style>
 .tech-slideshow {
@@ -889,6 +902,51 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
       </div>
     </section>
     <!-- End Services Section -->
+<!--POST CONFERENCE EXTENDED PUBLICATIONS:-->
+<!-- ======= Post Conference Extended Publications Section ======= -->
+<section id="publications" class="publications">
+  <div class="container">
+    <div class="section-title" data-aos="zoom-out">
+      <h2>POST CONFERENCE EXTENDED PUBLICATIONS:</h2>
+      <p>Extended Publications</p>
+      <h7>Post Conference selective extended articles will be recommended for possible publications in the following Journals after normal review process by the journal editorial team:</h7>
+    </div>
+
+    <div class="row content" data-aos="fade-up" style="text-align: center;">
+      <!-- Image 1 -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <img src="static/img/picture_a.jpg" class="img-fluid" alt="Journal Cover 1" />
+        <a style="color: darkblue;" href="https://www.sciencedirect.com/journal/supply-chain-analytics/">a. Supply Chain Analytics (Elsevier, Scopus Indexed)</a>
+      </div>
+      <!-- Image 2 -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <img src="static/img/Picture_b.jpg" class="img-fluid" alt="Journal Cover 2" />
+        <a style="color: darkblue;" href="https://www.sciencedirect.com/journal/healthcare-analytics">b. Healthcare Analytics (Elsevier, Scopus Indexed)</a>
+      </div>
+      <!-- Image 3 -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <img src="static/img/Picture_c.jpg" class="img-fluid" alt="Journal Cover 3" />
+        <a style="color: darkblue;" href="https://www.sciencedirect.com/journal/decision-analytics-journal">c. Decision Analytics Journal (Elsevier, Scopus Indexed)</a>
+      </div>
+      <!-- Image 4 -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <img src="static/img/Picture_d.jpeg" class="img-fluid" alt="Journal Cover 4" />
+        <a style="color: darkblue;" href="https://tehnickiglasnik.unin.hr/">Technical Journal (TG – TJ) (Scopus and WoS)</a>
+      </div>
+      <!-- Image 5 -->
+      <div class="col-lg-3 col-md-6 mb-4">
+        <img src="static/img/picture_e.jpg" class="img-fluid" alt="Journal Cover 5" />
+        <a style="color: darkblue;" href="https://ojs.wiserpub.com/index.php/CM/">Contemporary Mathematics (Scopus and WoS)
+ISSN: 2705-1064 (Print) 2705-1056 (Online)
+</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ======= End Post Conference Extended Publications Section ======= -->
+
+
+
     <!--LIST-->
     <div class="content">
 
