--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -454,6 +454,8 @@ p:last-child{
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Submission</a></li>
+          <li><a class="nav-link scrollto" href="#publications">Extended Publications</a></li>
+          <li><a class="nav-link scrollto" href="#Topics">Topics</a></li>
           <li><a class="nav-link scrollto" href="#keyd">Key Dates</a></li>
           <li><a class="nav-link scrollto " href="#speakers">Keynote Speakers</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Register</a></li>
@@ -948,7 +950,7 @@ ISSN: 2705-1064 (Print) 2705-1056 (Online)
 
 
     <!--LIST-->
-    <div class="content">
+    <div class="content" id="Topics" class="Topics">
 
     <div class="container">
       <h2 class="mb-5"></h2>
